Login sayfası ve user/user girişi eklendi

--- a/index.html
+++ b/index.html
@@ -68,6 +68,30 @@
     <script>
         // Disable session timer for login page
         window.DISABLE_SESSION_TIMER = true;
+
+        // Basit user/user login
+        document.addEventListener('DOMContentLoaded', function() {
+            const form = document.querySelector('.login-form');
+            const errorBubble = document.getElementById('errorBubble');
+            form.addEventListener('submit', function(e) {
+                e.preventDefault();
+                const username = document.getElementById('username').value.trim();
+                const password = document.getElementById('password').value.trim();
+                if (username === 'user' && password === 'user') {
+                    // Giriş başarılı, yönlendir
+                    document.getElementById('loadingScreen').style.display = 'flex';
+                    setTimeout(function() {
+                        window.location.href = 'database.html';
+                    }, 1200);
+                } else {
+                    // Hatalı giriş
+                    errorBubble.style.display = 'flex';
+                    setTimeout(function() {
+                        errorBubble.style.display = 'none';
+                    }, 2000);
+                }
+            });
+        });
     </script>
     <script src="global-features.js"></script>
 </body>
