--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         // Disable session timer for login page
         window.DISABLE_SESSION_TIMER = true;
 
-        // Basit user/user login
+        // Basit user/user login - Firebase entegrasyonu ile
         document.addEventListener('DOMContentLoaded', function() {
             const form = document.querySelector('.login-form');
             const errorBubble = document.getElementById('errorBubble');
@@ -81,21 +81,57 @@
                 e.preventDefault();
                 const username = document.getElementById('username').value.trim();
                 const password = document.getElementById('password').value.trim();
-                if (username === 'user' && password === 'user') {
-                    // Giriş başarılı, yönlendir
-                    document.getElementById('loadingScreen').style.display = 'flex';
-                    setTimeout(function() {
-                        window.location.href = 'database.html';
-                    }, 1200);
-                } else {
-                    // Hatalı giriş
+                
+                // Firebase'de kullanıcı kontrolü
+                checkUserInFirebase(username, password)
+                .then(isValid => {
+                    if (isValid) {
+                        // Giriş başarılı, kullanıcı ID'sini kaydet
+                        localStorage.setItem('currentUserId', username);
+                        document.getElementById('loadingScreen').style.display = 'flex';
+                        setTimeout(function() {
+                            window.location.href = 'database.html';
+                        }, 1200);
+                    } else {
+                        // Hatalı giriş
+                        errorBubble.style.display = 'flex';
+                        setTimeout(function() {
+                            errorBubble.style.display = 'none';
+                        }, 2000);
+                    }
+                })
+                .catch(error => {
+                    console.error('Giriş hatası:', error);
                     errorBubble.style.display = 'flex';
                     setTimeout(function() {
                         errorBubble.style.display = 'none';
                     }, 2000);
-                }
+                });
             });
         });
+
+        // Firebase kullanıcı kontrolü
+        function checkUserInFirebase(username, password) {
+            return db.collection("users").doc(username).get()
+            .then(doc => {
+                if (doc.exists) {
+                    const userData = doc.data();
+                    return userData.password === password;
+                } else {
+                    // Eğer kullanıcı yoksa, basit user/user kontrolü yap ve oluştur
+                    if (username === 'user' && password === 'user') {
+                        // Varsayılan kullanıcıyı oluştur
+                        return db.collection("users").doc(username).set({
+                            username: username,
+                            password: password,
+                            role: 'admin',
+                            createdAt: new Date()
+                        }).then(() => true);
+                    }
+                    return false;
+                }
+            });
+        }
 
         // Firebase config - buraya kendi kodunuzu ekleyin
         const firebaseConfig = {
