--- a/profile.html
+++ b/profile.html
@@ -23,6 +23,11 @@
     <link rel="stylesheet" href="database-style.css">
     <link rel="stylesheet" href="profile-style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    
+    <!-- Firebase App (core) -->
+    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js"></script>
+    <!-- Firestore -->
+    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js"></script>
 </head>
 <body class="profile-page">
     <!-- Top Panel -->
@@ -1011,6 +1016,20 @@
         </div>
     </div>
 
+    <script>
+        // Firebase config
+        const firebaseConfig = {
+          apiKey: "AIzaSyCkCL0MJWOvv6cKCsnleL6EgIH1JsF_rzU",
+          authDomain: "nex-database.firebaseapp.com",
+          projectId: "nex-database",
+          storageBucket: "nex-database.appspot.com",
+          messagingSenderId: "532729129753",
+          appId: "1:532729129753:web:4af9c4bb3ff18c9902f388"
+        };
+        // Başlat
+        firebase.initializeApp(firebaseConfig);
+        const db = firebase.firestore();
+    </script>
     <script src="profile-script.js"></script>
     <script src="global-features.js"></script>
 </body>
