Bruteforce güvenlik koruması

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -20,8 +20,8 @@
         })();
     </script>
     
-    <link rel="stylesheet" href="database-style.css">
-    <link rel="stylesheet" href="profile-style.css">
+    <link rel="stylesheet" href="../assets/css/database-style.css">
+    <link rel="stylesheet" href="../assets/css/profile-style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     <!-- Firebase App (core) -->
@@ -35,7 +35,7 @@
         <!-- Sol Taraf -->
         <div class="left-section">
             <div class="logo-section" onclick="window.location.href='database.html'" style="cursor: pointer;">
-                <img src="logo.png" alt="NEX Logo" class="top-logo">
+                <img src="../assets/images/logo.png" alt="NEX Logo" class="top-logo">
                 <div class="logo-text">
                     <span class="top-title">NEX DATABASE</span>
                     <span class="top-subtitle">FSAC - Yıldız Teknik Üniversitesi</span>
@@ -1030,8 +1030,8 @@
         firebase.initializeApp(firebaseConfig);
         const db = firebase.firestore();
     </script>
-    <script src="profile-script.js"></script>
-    <script src="global-features.js"></script>
+    <script src="../assets/js/profile-script.js"></script>
+    <script src="../assets/js/global-features.js"></script>
 </body>
 </html>
 
