--- a/pages/archive.html
+++ b/pages/archive.html
@@ -20,7 +20,7 @@
         })();
     </script>
     
-    <link rel="stylesheet" href="database-style.css">
+    <link rel="stylesheet" href="../assets/css/database-style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -34,7 +34,7 @@
                 <span></span>
             </button>
             <div class="logo-section" onclick="window.location.href='database.html'" style="cursor: pointer;">
-                <img src="logo.png" alt="NEX Logo" class="top-logo">
+                <img src="../assets/images/logo.png" alt="NEX Logo" class="top-logo">
                 <div class="logo-text">
                     <span class="top-title">NEX DATABASE</span>
                     <span class="top-subtitle">FSAC - Yıldız Teknik Üniversitesi</span>
@@ -196,7 +196,7 @@
     <!-- Overlay -->
     <div class="overlay" id="overlay"></div>
 
-    <script src="global-features.js"></script>
+    <script src="../assets/js/global-features.js"></script>
 </body>
 </html>
 
