--- a/pages/database.html
+++ b/pages/database.html
@@ -28,7 +28,7 @@
         })();
     </script>
     
-    <link rel="stylesheet" href="database-style.css">
+    <link rel="stylesheet" href="../assets/css/database-style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Firebase v9+ Modular SDK -->
     <script type="module">
@@ -76,7 +76,7 @@
                 <span></span>
             </button>
             <div class="logo-section" onclick="window.location.href='database.html'" style="cursor: pointer;">
-                <img src="logo.png" alt="NEX Logo" class="top-logo">
+                <img src="../assets/images/logo.png" alt="NEX Logo" class="top-logo">
                 <div class="logo-text">
                     <span class="top-title">NEX DATABASE</span>
                     <span class="top-subtitle">FSAC - Yıldız Teknik Üniversitesi</span>
@@ -181,7 +181,7 @@
                 <!-- 3D Rotating Journal Cover -->
                 <div class="journal-cover-container">
                     <div class="journal-cover">
-                        <img src="journal.png" alt="NEX Annual Science Journal" class="journal-image">
+                        <img src="../assets/images/journal.png" alt="NEX Annual Science Journal" class="journal-image">
                     </div>
                 </div>
 
@@ -386,7 +386,7 @@
         </div>
     </div>
 
-    <script src="database-script.js"></script>
-    <script src="global-features.js"></script>
+    <script src="../assets/js/database-script.js"></script>
+    <script src="../assets/js/global-features.js"></script>
 </body>
 </html>
