Üyelik giriş düzenlemesi

--- a/pages/members.html
+++ b/pages/members.html
@@ -75,7 +75,7 @@
             </div>
             <div class="profile-section" id="profileSection">
                 <div class="profile-info">
-                    <div class="profile-name">Oğuzhan Dedeoğlu</div>
+                    <div class="profile-name"></div>
                     <div class="profile-rank">Sistem Yöneticisi</div>
                 </div>
                 <div class="profile-avatar">
