--- a/pages/database.html
+++ b/pages/database.html
@@ -109,7 +109,7 @@
             </div>
             <div class="profile-section" id="profileSection">
                 <div class="profile-info">
-                    <div class="profile-name">Oğuzhan Dedeoğlu</div>
+                    <div class="profile-name"></div>
                     <div class="profile-rank">Sistem Yöneticisi</div>
                 </div>
                 <div class="profile-avatar">
@@ -395,7 +395,7 @@
     <div class="welcome-bubble" id="welcomeBubble">
         <div class="welcome-content">
             <div class="welcome-title">Hoş Geldiniz!</div>
-            <div class="welcome-user">Oğuzhan Dedeoğlu</div>
+            <div class="welcome-user"></div>
         </div>
     </div>
 
