--- a/pages/profile.html
+++ b/pages/profile.html
@@ -206,10 +206,10 @@
                                     <span class="full-name"></span>
                                 </div>
                                 <div class="institution-info">
-                                    <div class="institution">Yıldız Teknik Üniversitesi</div>
-                                    <div class="faculty">Fen Fakültesi</div>
-                                    <div class="department">Matematik Mühendisliği Bölümü</div>
-                                    <div class="status">Aktif Öğretim Üyesi</div>
+                                    <div class="institution"></div>
+                                    <div class="faculty"></div>
+                                    <div class="department"></div>
+                                    <div class="status"></div>
                                 </div>
                                 <button class="edit-basic-info-btn" id="editBasicInfoBtn">
                                     <i class="fas fa-edit"></i>
@@ -225,6 +225,7 @@
                                             <label for="titlePrefixEdit">Ünvan</label>
                                             <select id="titlePrefixEdit">
                                                 <option value="">Ünvan Seçin</option>
+                                                <option value="">-</option>
                                                 <option value="Prof. Dr.">Prof. Dr.</option>
                                                 <option value="Doç. Dr.">Doç. Dr.</option>
                                                 <option value="Dr. Öğr. Üyesi">Dr. Öğr. Üyesi</option>
@@ -256,11 +257,8 @@
                                         <div class="form-group">
                                             <label for="statusEdit">Durum</label>
                                             <select id="statusEdit">
-                                                <option value="Aktif Öğretim Üyesi">Aktif Öğretim Üyesi</option>
-                                                <option value="Emekli Öğretim Üyesi">Emekli Öğretim Üyesi</option>
-                                                <option value="Misafir Öğretim Üyesi">Misafir Öğretim Üyesi</option>
-                                                <option value="Araştırma Görevlisi">Araştırma Görevlisi</option>
-                                                <option value="Öğretim Görevlisi">Öğretim Görevlisi</option>
+                                                <option value="Aktif Öğrenci">Aktif Öğrenci</option>
+                                                <option value="Pasif Öğrenci">Pasif Öğrenci</option>
                                             </select>
                                         </div>
                                     </div>
@@ -422,7 +420,7 @@
                             
                             <div class="card-footer">
                                 <div class="organization-name">
-                                    Faculty of Science Academic Club
+                                    Foundry Science & Art Club
                                 </div>
                             </div>
                         </div>
@@ -469,7 +467,7 @@
                             
                             <div class="card-footer">
                                 <div class="organization-name">
-                                    Next Generation Excellence
+                                    Nexus of Exploratory Sciences
                                 </div>
                             </div>
                         </div>
@@ -650,7 +648,7 @@
                         <option value="B1">B1 - Orta Alt</option>
                         <option value="B2">B2 - Orta Üst</option>
                         <option value="C1">C1 - İleri</option>
-                        <option value="C2">C2 - Yeterlik</option>
+                        <option value="C2">C2 - Yeterlilik</option>
                     </select>
                 </div>
                 <div class="modal-actions">
