--- a/pages/workshops.html
+++ b/pages/workshops.html
@@ -213,7 +213,7 @@
             <span>Ayarlar</span>
         </a>
         <hr class="dropdown-divider">
-        <a href="index.html" class="dropdown-item logout">
+        <a href="#" class="dropdown-item logout" onclick="logout(); return false;">
             <i class="fas fa-sign-out-alt dropdown-icon"></i>
             <span>Çıkış</span>
         </a>
