--- a/pages/profile.html
+++ b/pages/profile.html
@@ -185,13 +185,13 @@
                     <div class="profile-photo-info">
                         <div class="main-profile-photo" id="mainProfilePhoto">
                             <i class="fas fa-user-circle default-photo-icon"></i>
-                            <!-- Photo upload overlay (hidden by default) -->
-                            <div class="photo-upload-overlay" id="photoUploadOverlay" style="display: none;">
+                            <!-- Photo controls (düzenleme modunda gösterilecek) -->
+                            <div class="photo-controls" id="photoControls">
                                 <label for="photoUpload" class="photo-upload-btn">
                                     <i class="fas fa-camera"></i>
                                     Fotoğraf Değiştir
                                 </label>
-                                <button type="button" class="photo-remove-btn" id="photoRemoveBtn" style="display: none;">
+                                <button type="button" class="photo-remove-btn" id="photoRemoveBtn">
                                     <i class="fas fa-trash"></i>
                                     Fotoğrafı Kaldır
                                 </button>
