--- a/pages/database.html
+++ b/pages/database.html
@@ -96,7 +96,7 @@
         function initializeFirebase() {
             // Import Firebase functions
             import('https://www.gstatic.com/firebasejs/10.13.0/firebase-app.js').then(({ initializeApp }) => {
-                import('https://www.gstatic.com/firebasejs/10.13.0/firebase-firestore.js').then(({ getFirestore, collection, doc, getDoc, setDoc, addDoc, getDocs, query, where }) => {
+                import('https://www.gstatic.com/firebasejs/10.13.0/firebase-firestore.js').then(({ getFirestore, collection, doc, getDoc, setDoc, addDoc, getDocs, query, where, updateDoc }) => {
                     
                     // Firebase configuration
                     const firebaseConfig = {
@@ -123,7 +123,8 @@
                         addDoc,
                         getDocs,
                         query,
-                        where
+                        where,
+                        updateDoc
                     };
                     
                     console.log('✅ Firebase initialized successfully for database page!');
@@ -377,6 +378,7 @@
                 <div class="console-form" id="userForm" style="display: none;">
                     <input type="text" id="userName" placeholder="İsim" class="console-input">
                     <input type="email" id="userEmail" placeholder="E-mail" class="console-input">
+                    <input type="password" id="userPassword" placeholder="Şifre" class="console-input">
                     <input type="text" id="userRole" placeholder="Rol (örn: admin, user)" class="console-input">
                     <button class="console-btn primary" onclick="submitUser()">
                         <i class="fas fa-save"></i> Kaydet
