--- a/pages/profile.html
+++ b/pages/profile.html
@@ -149,6 +149,10 @@
                 <i class="fas fa-flask nav-icon"></i>
                 <span>Araştırma Alanları</span>
             </a>
+            <a href="#" class="nav-item" data-section="membership">
+                <i class="fas fa-id-card nav-icon"></i>
+                <span>Üyelik Bilgileri</span>
+            </a>
             <a href="#" class="nav-item" data-section="announcements">
                 <i class="fas fa-bullhorn nav-icon"></i>
                 <span>Duyurular & Dokümanlar</span>
