Backend Temelleri atıldı

--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NEX Database - Giriş</title>
-    <script>
-        // Direkt ana sayfaya yönlendirme (yükleme ekranı olmadan)
-        window.location.replace('pages/index.html');
-    </script>
+    <script src="assets/js/redirect.js"></script>
 </head>
 <body>
 </body>
