--- a/test-setup.html
+++ b/test-setup.html
@@ -11,16 +11,6 @@
     <button onclick="checkCurrentUser()">Check Current User</button>
     <div id="result"></div>
 
-    <script>
-        function setupTestUser() {
-            localStorage.setItem('currentUserEmail', 'test@example.com');
-            document.getElementById('result').innerHTML = '<p style="color: green;">Test user email set to: test@example.com</p>';
-        }
-
-        function checkCurrentUser() {
-            const email = localStorage.getItem('currentUserEmail');
-            document.getElementById('result').innerHTML = `<p>Current user email: ${email || 'Not set'}</p>`;
-        }
-    </script>
+    <script src="assets/js/test-setup.js"></script>
 </body>
 </html>
